# send2trash

./: CHANGES.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: default.yml
send2trash/: plat_gio.py
send2trash/win/: __init__.py  legacy.py
tests/: conftest.py  test_plat_other.py  test_plat_win.py  test_script_main.py
